[NEW] Added entities, repositories, migrations

--- a/App.Api/App.Api.csproj
+++ b/App.Api/App.Api.csproj
@@ -24,4 +24,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\App.Core\App.Core.csproj" />
+  </ItemGroup>
+
 </Project>
