--- a/App.Api/appsettings.Development.json
+++ b/App.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=host.docker.internal;Database=Crawco;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
