--- a/App.Infrastructure/App.Infrastructure.csproj
+++ b/App.Infrastructure/App.Infrastructure.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\App.Domain\App.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
