--- a/App.Api/appsettings.Development.json
+++ b/App.Api/appsettings.Development.json
@@ -1,11 +1,17 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=host.docker.internal;Database=Crawco;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=host.docker.internal,1433;Database=Crawco;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=true;;User Id=sa;Password=!qazxsw2"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:32786/",
+    "ValidIssuer": "https://localhost:32786/",
+    "Secret": "Ku~Kx-xkObOYL#(bKe/$42B+7y(}.='3IL\\73lC`",
+    "DurationInMinutes": 40
   }
 }
